--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "posthtml": "^0.12.0",
     "pug": "^2.0.4",
     "rimraf": "^3.0.0",
+    "rollup": "^1.26.3",
+    "rollup-plugin-terser": "^5.1.2",
     "sugarss": "^2.0.0"
   },
   "devDependencies": {
