--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "rimraf": "^3.0.0",
     "rollup": "^1.26.3",
     "rollup-plugin-terser": "^5.1.2",
-    "sugarss": "^2.0.0"
+    "sugarss": "^2.0.0",
+    "unzipper": "^0.10.5"
   },
   "devDependencies": {
     "@logux/eslint-config": "^34.0.0",
