--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "gcloud builds --project logux-255417 submit"
   },
   "dependencies": {
+    "globby": "^10.0.1",
     "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
     "postcss": "^7.0.21",
@@ -23,12 +24,19 @@
     "postcss-momentum-scrolling": "^1.9.15",
     "postcss-nested": "^4.2.1",
     "postcss-url": "^8.0.0",
-    "posthtml": "^0.12.0",
     "pug": "^2.0.4",
+    "rehype-parse": "^6.0.1",
+    "rehype-stringify": "^6.0.0",
+    "remark-highlight.js": "^5.1.1",
+    "remark-html": "^10.0.0",
+    "remark-parse": "^7.0.1",
+    "remark-rehype": "^5.0.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.26.3",
     "rollup-plugin-terser": "^5.1.2",
     "sugarss": "^2.0.0",
+    "unified": "^8.4.1",
+    "unist-util-flatmap": "^1.0.0",
     "unzipper": "^0.10.5"
   },
   "devDependencies": {
