--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sugarss": "^2.0.0",
     "unified": "^8.4.2",
     "unist-util-flatmap": "^1.0.0",
+    "unist-util-visit": "^2.0.0",
     "unzipper": "^0.10.5"
   },
   "devDependencies": {
