--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "yarn lint && yarn build && size-limit",
     "clean": "rimraf dist/ .cache",
     "build": "rimraf dist/ && NODE_ENV=production ./scripts/build",
-    "nginx": "podman run --rm -p 8000:80 -e PORT=80 $(buildah bud .)",
-    "nginx:shell": "podman run --rm -i $(buildah bud .) sh",
+    "nginx": "podman build -t loguxio . && podman run --rm -p 8000:80 -e PORT=80 -it loguxio",
     "deploy": "gcloud builds --project logux-255417 submit"
   },
   "dependencies": {
