--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-url": "^8.0.0",
     "pug": "^2.0.4",
     "rehype-parse": "^6.0.2",
+    "rehype-raw": "^4.0.1",
     "rehype-stringify": "^6.0.1",
     "remark-highlight.js": "^5.1.1",
     "remark-html": "^10.0.0",
