--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "capitalize": "^2.0.0",
+    "documentation": "^12.1.3",
     "globby": "^10.0.1",
     "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
