--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^3.0.0",
     "rollup": "^1.26.5",
     "rollup-plugin-terser": "^5.1.2",
+    "spinnies": "^0.5.0",
     "sugarss": "^2.0.0",
     "unified": "^8.4.2",
     "unist-util-filter": "^2.0.0",
