Fix script names

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "secrets:decrypt": "gcloud kms --project logux-255417 decrypt --plaintext-file=secrets.json --ciphertext-file=secrets.json.enc --location=global --keyring=secrets --key=password",
     "securitytxt:sign": "gpg --digest-algo SHA512 --clearsign src/well-known/security.txt",
-    "start": "parcel serve src/uikit.pug --open",
+    "start:uikit": "parcel serve src/uikit.pug --open",
     "lint": "eslint . scripts/* && stylelint src/**/*.sss",
     "test": "yarn lint && yarn build && size-limit",
     "clean": "rimraf dist/ .cache",
     "build": "NODE_ENV=production ./scripts/build",
-    "nginx": "podman build -t loguxio . && podman run -v ./dist/:/var/www/ --privileged --rm -p 8000:80 -e PORT=80 -it loguxio",
+    "start": "podman build -t loguxio . && podman run -v ./dist/:/var/www/ --privileged --rm -p 8000:80 -e PORT=80 -it loguxio",
     "deploy": "gcloud builds --project logux-255417 submit"
   },
   "dependencies": {
