Download more JS projects

--- a/scripts/build
+++ b/scripts/build
@@ -55,7 +55,9 @@ async function build () {
     repackScripts(assets),
     downloadProject(spinner, 'logux'),
     downloadProject(spinner, 'logux-core'),
-    downloadProject(spinner, 'logux-server')
+    downloadProject(spinner, 'logux-server'),
+    downloadProject(spinner, 'logux-client'),
+    downloadProject(spinner, 'logux-redux')
   ])
   let [guides, nodeJsdoc, uikit] = await Promise.all([
     readGuides(),
