--- a/package.json
+++ b/package.json
@@ -103,6 +103,11 @@
     },
     "extends": "@logux/eslint-config/node",
     "rules": {
+      "node/no-unsupported-features/node-builtins": ["error", {
+        "ignores": [
+          "worker_threads"
+        ]
+      }],
       "node/no-unpublished-require": "off"
     },
     "overrides": [
