Try to fix Google Cloud output

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,6 +17,8 @@ steps:
     entrypoint: yarn
     args:
       - build
+    env:
+      - 'CI=1'
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - build
