--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -40,5 +40,7 @@ steps:
       - --platform=managed
   - name: node:13
     entrypoint: ./scripts/update-cdn
+  - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: ./scripts/clean-images
 images:
   - gcr.io/$PROJECT_ID/loguxio
