--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lowlight": "^1.13.0",
     "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
-    "postcss": "^7.0.21",
+    "postcss": "^7.0.23",
     "postcss-hexrgba": "^2.0.0",
     "postcss-media-minmax": "^4.0.0",
     "postcss-mixins": "^6.2.3",
@@ -37,7 +37,7 @@
     "remark-parse": "^7.0.2",
     "remark-rehype": "^5.0.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.27.0",
+    "rollup": "^1.27.2",
     "rollup-plugin-terser": "^5.1.2",
     "slugify": "^1.3.6",
     "spinnies": "^0.5.0",
@@ -63,7 +63,7 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^13.0.0",
-    "husky": "^3.0.9",
+    "husky": "^3.1.0",
     "lint-staged": "^9.4.3",
     "stylelint": "^12.0.0",
     "stylelint-config-recess-order": "^2.0.3",
@@ -103,11 +103,14 @@
     },
     "extends": "@logux/eslint-config/node",
     "rules": {
-      "node/no-unsupported-features/node-builtins": ["error", {
-        "ignores": [
-          "worker_threads"
-        ]
-      }],
+      "node/no-unsupported-features/node-builtins": [
+        "error",
+        {
+          "ignores": [
+            "worker_threads"
+          ]
+        }
+      ],
       "node/no-unpublished-require": "off"
     },
     "overrides": [
