Make main menu live

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,42 @@ http {
       rewrite [^/]$ https://$http_host$uri/ permanent;
     }
 
+    location = / {
+      return 302 /guide/architecture/core/;
+    }
+
+    location = /guide/ {
+      return 302 /guide/architecture/core/;
+    }
+
+    location = /guide/architecture/ {
+      return 302 /guide/architecture/core/;
+    }
+
+    location = /guide/starting/ {
+      return 302 /guide/starting/creating-server/;
+    }
+
+    location = /guide/concepts/ {
+      return 302 /guide/concepts/node/;
+    }
+
+    location = /recipes/ {
+      return 302 /recipes/authentication/;
+    }
+
+    location = /protocols/ {
+      return 302 /protocols/ws/spec/;
+    }
+
+    location = /protocols/ws/ {
+      return 302 /protocols/ws/spec/;
+    }
+
+    location = /protocols/backend/ {
+      return 302 /protocols/backend/spec/;
+    }
+
     add_header Cache-Control "public";
 
     location ~* "(\.js|\.css|\.png|\.svg|\.woff2|\.webmanifest)$" {
