--- a/nginx.conf
+++ b/nginx.conf
@@ -39,39 +39,39 @@ http {
     }
 
     location = / {
-      return 302 /guide/architecture/core/;
+      return 302 https://$http_host/guide/architecture/core/;
     }
 
     location = /guide/ {
-      return 302 /guide/architecture/core/;
+      return 302 https://$http_host/guide/architecture/core/;
     }
 
     location = /guide/architecture/ {
-      return 302 /guide/architecture/core/;
+      return 302 https://$http_host/guide/architecture/core/;
     }
 
     location = /guide/starting/ {
-      return 302 /guide/starting/creating-server/;
+      return 302 https://$http_host/guide/starting/creating-server/;
     }
 
     location = /guide/concepts/ {
-      return 302 /guide/concepts/node/;
+      return 302 https://$http_host/guide/concepts/node/;
     }
 
     location = /recipes/ {
-      return 302 /recipes/authentication/;
+      return 302 https://$http_host/recipes/authentication/;
     }
 
     location = /protocols/ {
-      return 302 /protocols/ws/spec/;
+      return 302 https://$http_host/protocols/ws/spec/;
     }
 
     location = /protocols/ws/ {
-      return 302 /protocols/ws/spec/;
+      return 302 https://$http_host/protocols/ws/spec/;
     }
 
     location = /protocols/backend/ {
-      return 302 /protocols/backend/spec/;
+      return 302 https://$http_host/protocols/backend/spec/;
     }
 
     add_header Cache-Control "public";
