--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:uikit": "parcel serve src/uikit.pug --open",
     "lint": "eslint . scripts/build scripts/update-cdn && stylelint src/**/*.sss",
     "test": "yarn lint && yarn build && size-limit",
-    "clean": "rimraf dist/ .cache",
+    "clean": "del-cli dist/ .cache",
     "build": "NODE_ENV=production ./scripts/build",
     "start": "podman build -t loguxio . && podman run -v ./dist/:/var/www/ --privileged --rm -p 8000:80 -e PORT=80 -it loguxio",
     "deploy": "gcloud builds --project logux-255417 submit"
@@ -15,6 +15,7 @@
   "dependencies": {
     "capitalize": "^2.0.0",
     "chalk": "^3.0.0",
+    "del": "^5.1.0",
     "documentation": "^12.1.4",
     "globby": "^10.0.1",
     "lowlight": "^1.13.0",
@@ -36,7 +37,6 @@
     "remark-html": "^10.0.0",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^5.0.0",
-    "rimraf": "^3.0.0",
     "rollup": "^1.27.3",
     "rollup-plugin-terser": "^5.1.2",
     "slugify": "^1.3.6",
@@ -52,6 +52,7 @@
     "@logux/eslint-config": "^34.0.1",
     "@logux/sharec-config": "^0.5.6",
     "@size-limit/file": "^2.2.1",
+    "del-cli": "^3.0.0",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.4.1",
@@ -83,8 +84,9 @@
     "not and_qq > 0",
     "not android > 0"
   ],
+  "type": "module",
   "engines": {
-    "node": ">=13.0.0"
+    "node": ">=13.2.0"
   },
   "postcss": {
     "plugins": {
@@ -98,9 +100,6 @@
     }
   },
   "eslintConfig": {
-    "parserOptions": {
-      "sourceType": "module"
-    },
     "extends": "@logux/eslint-config/node",
     "rules": {
       "node/no-unsupported-features/node-builtins": [
@@ -111,19 +110,15 @@
           ]
         }
       ],
+      "node/no-unsupported-features/es-syntax": "off",
       "node/no-unpublished-require": "off"
     },
-    "overrides": [
-      {
-        "files": "src/**/*.js",
-        "rules": {
-          "node/no-unsupported-features/es-syntax": "off"
-        }
-      }
-    ]
+    "parserOptions": {
+      "sourceType": "module"
+    }
   },
   "eslintIgnore": [
-    "node_modules",
+    "scripts/lib/dirs.js",
     "dist",
     ".cache"
   ],
