--- a/scripts/build
+++ b/scripts/build
@@ -1,21 +1,21 @@
 #!/usr/bin/env node
 
-let chalk = require('chalk')
+import chalk from 'chalk'
 
-let generateWebManifest = require('./steps/generate-web-manifest')
-let downloadProject = require('./steps/download-project')
-let findFilesInCSS = require('./steps/find-files-in-css')
-let cleanBuildDir = require('./steps/clean-build-dir')
-let copyWellKnown = require('./steps/copy-well-known')
-let compressFiles = require('./steps/compress-files')
-let compileAssets = require('./steps/compile-assets')
-let repackScripts = require('./steps/repack-scripts')
-let createLayout = require('./steps/create-layout')
-let updateHtml = require('./steps/update-html')
-let buildDocs = require('./steps/build-docs')
-let readJsdoc = require('./steps/read-jsdoc')
-let readDocs = require('./steps/read-docs')
-let buildApi = require('./steps/build-api')
+import generateWebManifest from './steps/generate-web-manifest.js'
+import downloadProject from './steps/download-project.js'
+import findFilesInCSS from './steps/find-files-in-css.js'
+import cleanBuildDir from './steps/clean-build-dir.js'
+import copyWellKnown from './steps/copy-well-known.js'
+// import compressFiles from './steps/compress-files.js'
+import compileAssets from './steps/compile-assets.js'
+import repackScripts from './steps/repack-scripts.js'
+import createLayout from './steps/create-layout.js'
+import updateHtml from './steps/update-html.js'
+import buildDocs from './steps/build-docs.js'
+import readJsdoc from './steps/read-jsdoc.js'
+import readDocs from './steps/read-docs.js'
+import buildApi from './steps/build-api.js'
 
 async function prepareHtml () {
   await cleanBuildDir()
@@ -57,7 +57,7 @@ async function build () {
     buildApi(assets, layout, 'Node API', nodeJsdoc),
     buildApi(assets, layout, 'Web API', webJsdoc)
   ])
-  await compressFiles(assets)
+  // await compressFiles(assets)
 }
 
 build().catch(e => {
