--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "stylelint-order": "^3.1.1",
     "svgo": "^1.3.2"
   },
+  "repository": "logux/logux.io",
+  "homepage": "https://logux.io/",
   "license": "MIT",
   "browserslist": [
     "last 2 versions",
