--- a/nginx.conf
+++ b/nginx.conf
@@ -81,6 +81,10 @@ http {
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
+    location = /logo.svg {
+      add_header Cache-Control "public, max-age=86400, immutable";
+    }
+
     location ~* "(\.png|\.ico|\.woff2)$" {
       add_header Content-Security-Policy "";
     }
