--- a/nginx.conf
+++ b/nginx.conf
@@ -85,6 +85,10 @@ http {
       add_header Cache-Control "public, max-age=86400, immutable";
     }
 
+    location = /logotype.svg {
+      add_header Cache-Control "public, max-age=86400, immutable";
+    }
+
     location ~* "(\.png|\.ico|\.woff2)$" {
       add_header Content-Security-Policy "";
     }
