--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@master
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@master
         with:
           node-version: '>=13.2'
       - name: Install dependencies
         run: yarn install --production
       - name: Build and test
         run: yarn test
-      - name: Build Docker image
-        uses: actions/docker/cli@master
-        with:
-          args: build -t gcr.io/logux-255417/loguxio .
