--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,9 @@
-name: Test
+name: Deploy
 
 on:
-  push
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -14,10 +16,11 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: '>=13.2'
-      - name: Install build dependencies
-        run: yarn install --production
+      - name: Install dependencies
+        run: yarn install
       - name: Build
         run: yarn test
         env:
           CI: 1
-          GITTER_USERS: 43
+          GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
+          GITTER_TOKEN: ${{ secrets.GITTER_TOKEN }}
