--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,18 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: '>=13.2'
+      - name: Get Yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache Yarn
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: yarn-production-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-production-
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --production
       - name: Build
         run: yarn test
         env:
