--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,18 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: '>=13.2'
+      - name: Get Yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache Yarn
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: yarn-all-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-all-
       - name: Install build dependencies
-        run: yarn install --production
+        run: yarn install
       - name: Build
         run: yarn test
         env:
