--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --production
       - name: Build
-        run: yarn test
+        run: yarn build
         env:
           CI: 1
           GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
